# PROTOCOL

./: .gitignore  GUARDRAIL.md  HEALER.md  MANIFEST.in  MEMSTORE.md  ORCHESTRATOR.md  README.md  TRAKR.md  VITALS.md  guardrail_server.py  healer_server.py  index.html  memstore_server.py  orchestrator_server.py  protocol-architecture.html  protocol-dashboard.html  protocol.sh  protocol_auth.py  pyproject.toml  setup.cfg  trakr_server.py  vitals_server.py
protocol/: __init__.py  cli.py
