[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-agent-os"
version = "0.2.0"
description = "PROTOCOL — The Agent Operating System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sovereign (Empire Labs Pty Ltd)", email = "contact@empirelabs.com.au"}
]
keywords = ["agent", "ai", "memory", "audit", "governance", "observability", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"

[project.scripts]
protocol = "protocol.cli:main"

[tool.setuptools.packages.find]
include = ["protocol*"]
