[metadata]
name = protocol-agent-os
version = 0.2.0
description = PROTOCOL — The Agent Operating System
long_description = file: README.md
long_description_content_type = text/markdown
author = Sovereign
author_email = contact@empirelabs.com.au
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: System :: Distributed Computing
keywords = agent, ai, memory, audit, governance, observability, orchestration

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    protocol = protocol.cli:main

[options.packages.find]
include =
    protocol*
